--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     container_name: "strapi"
     build:
       context: .
-    volumes:
-      - .:/app
+#    volumes:
+#      - .:/app
     ports:
       - '80:1337'
     privileged: true
